cluster-deployment/app.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: http-echo
  labels:
    app.kubernetes.io/name: http-echo

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
  namespace: http-echo
  labels:
    app.kubernetes.io/name: http-echo
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: http-echo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: http-echo
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo:1.0.0
          args:
            - -listen=:8080
            - -text="hoka"
          resources:
            limits:
              memory: 100Mi
              cpu: "0.5"
            requests:
              memory: 50Mi
              cpu: "0.1"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1

---
apiVersion: v1
kind: Service
metadata:
  name: http-echo
  namespace: http-echo
spec:
  selector:
    app.kubernetes.io/name: http-echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-echo
  namespace: http-echo
  labels:
    app.kubernetes.io/name: http-echo
  annotations:
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - echo.hoka.app
      secretName: echo.hoka.app-cert
  rules:
    - host: echo.hoka.app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: http-echo
                port:
                  number: 80
